# python-web

./: README.md  pyproject.toml
artifacts/: history_cnn.json  history_vgg_feat.json
src/python_web/: app.py  export_models.py  utils.py
