[project]
name = "python-web"
version = "0.1.0"
description = ""
authors = [
    {name = "Tania526-sudo",email = "starovoyt.tania@lll.kpi.ua"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "python_web", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
